Multiplatform expect/actual: single-source-set compilation + defaults graft (#106)
* feat(interop): host javac annotation processors through the JavaRunner seam

Slice 4 of docs/JAVA_INTEROP.md. The JavaRunner protocol gains a fifth
field: a -processorpath for the embedded javac (plus -proc:full, which
JDK >= 23 requires to run processors at all, and -s for generated
sources). javac discovers processors via ServiceLoader and owns the
multi-round APT loop — krusty does not reimplement rounds; generated
sources compile in the same in-process invocation and their classes
come back with the rest. javac_compile_proc exposes the seam;
javac_run/javac_compile keep their signatures via delegation, and the
runner rebuilds automatically (source-hash-keyed cache dir), so no
protocol mismatch with older binaries is possible.

Self-contained e2e (no external processor jars): an in-test-built
AbstractProcessor registered via META-INF/services in its class DIR
(javac accepts directories on the processor path) generates across TWO
rounds (@Gen Src -> @Gen2 SrcMid -> SrcMidEnd); krusty compiles Kotlin
calling the round-2-generated class and runs it; a Filer collision
surfaces as a failed compile (skip, never mis-grade).

* feat(plugins): combined KSP + APT outer fixpoint (codegen loop)

Slice 5 of docs/JAVA_INTEROP.md. run_codegen_loop connects the two
engines that already own their inner fixpoints — the in-process KspHost
(round backstop, per-run dedup) and javac's native APT rounds (behind
the harness's -processorpath seam):

  loop: KSP rounds over the current symbol view -> generated .kt/.java;
        the .java set grew -> one java-step recompile of the FULL set
        (javac + APT rounds inside), its classes' symbols fold back
        into the view; repeat while either engine contributes.

Generated file names dedup across outer iterations (HashSet) and the
symbol view dedups by FqName, so idempotent processors and repeated
java compiles contribute nothing new; a separate out